<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:text="@string/nome" />
    </android.support.design.widget.TextInputEditText>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spn_paroquia"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:autofillHints="@string/nome" />

    </android.support.design.widget.TextInputEditText>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edt_intencao"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:ems="10"
            android:hint="@string/intencao"
            android:inputType="textMultiLine"
            android:maxLines="255" />
    </android.support.design.widget.TextInputEditText>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_enviar_intencao"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_limpar_intencao"
        android:textColor="@color/branco" />
</LinearLayout>